# ChangeLog for sys-apps/man-db
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-db/ChangeLog,v 1.6 2008/11/17 14:51:07 vapier Exp $

*man-db-2.5.3 (17 Nov 2008)

  17 Nov 2008; Mike Frysinger <vapier@gentoo.org> +man-db-2.5.3.ebuild:
  Version bump.

*man-db-2.5.2 (25 Oct 2008)

  25 Oct 2008; Mike Frysinger <vapier@gentoo.org> +man-db-2.5.2.ebuild:
  Version bump.

*man-db-2.5.1 (24 Feb 2008)

  24 Feb 2008; Mike Frysinger <vapier@gentoo.org> +man-db-2.5.1.ebuild:
  Version bump.

*man-db-2.4.4 (13 Apr 2007)

  13 Apr 2007; Mike Frysinger <vapier@gentoo.org>
  +files/man-db-2.4.4-sections.patch, +man-db-2.4.4.ebuild:
  Version bump #173919 by Pierre-Yves Rofes.

*man-db-2.4.3-r1 (06 Oct 2006)

  06 Oct 2006; Mike Frysinger <vapier@gentoo.org>
  +files/man-db-2.4.3-sections.patch, +man-db-2.4.3-r1.ebuild:
  Respect more man sections #149857.

*man-db-2.4.3 (21 Feb 2006)

  21 Feb 2006; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.