@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/man-db
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-db/ChangeLog,v 1.6 2008/11/17 14:51:07 vapier Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-db/ChangeLog,v 1.7 2009/04/05 18:38:55 vapier Exp $
+
+*man-db-2.5.5 (05 Apr 2009)
+
+  05 Apr 2009; Mike Frysinger <vapier@gentoo.org> +man-db-2.5.5.ebuild:
+  Version bump #264993 by Arfrever Frehtes Taifersar Arahesis.
 
 *man-db-2.5.3 (17 Nov 2008)
 
